--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-	<title>Пасьянс «Плеяды»</title>
+	<title>РџР°СЃСЊСЏРЅСЃ В«РџР»РµСЏРґС‹В»</title>
 	<link rel="stylesheet" type="text/css" href="gamepleiad.css" />
 	<script type="text/javascript" src="gamepleiad.min.js"></script>
 	<script type="text/javascript" src="jquery-1.4.min.js"></script>
@@ -14,17 +14,17 @@
 		<div id="column-11" class="cardsright"><div class="spacer" ></div></div>
 		<div id="column-a">
 			<div id="column-a1">
-			<input id="bigb" type="button" value="Легко" onclick="GameStart(1)" />
-			<input id="bigb" type="button" value="Норма" onclick="GameStart(2)" />
-			<input id="bigb" type="button" value="Профи" onclick="GameStart(4)" />
+			<input id="bigb" type="button" value="Р›РµРіРєРѕ" onclick="GameStart(1)" />
+			<input id="bigb" type="button" value="РќРѕСЂРјР°" onclick="GameStart(2)" />
+			<input id="bigb" type="button" value="РџСЂРѕС„Рё" onclick="GameStart(4)" />
 			</div>
 			<div id="column-a2">
-			<input id="bigb" type="button" value="Отменить ход" onclick="CancelMoveClick()" />
-			<input id="bigb" type="button" value="Показать ход" onclick="WhatMoveClick()" />
-			<input id="bigb" type="button" value="Сдать 10 карт" onclick="CardMClick(5)" />
+			<input id="bigb" type="button" value="РћС‚РјРµРЅРёС‚СЊ С…РѕРґ" onclick="CancelMoveClick()" />
+			<input id="bigb" type="button" value="РџРѕРєР°Р·Р°С‚СЊ С…РѕРґ" onclick="WhatMoveClick()" />
+			<input id="bigb" type="button" value="РЎРґР°С‚СЊ 10 РєР°СЂС‚" onclick="CardMClick(5)" />
 			</div>
 		</div>
-		<p id="textvalue">Выберите сложность (Легко - 1 масть, Норма - 2 масти, Профи - 4 масти)</p>
+		<p id="textvalue">Р’С‹Р±РµСЂРёС‚Рµ СЃР»РѕР¶РЅРѕСЃС‚СЊ (Р›РµРіРєРѕ - 1 РјР°СЃС‚СЊ, РќРѕСЂРјР° - 2 РјР°СЃС‚Рё, РџСЂРѕС„Рё - 4 РјР°СЃС‚Рё)</p>
 		<div id="column-0" class="cardsdown"><div class="space" ></div></div>
 		<div id="column-1" class="cardsdown"><div class="space" ></div></div>
 		<div id="column-2" class="cardsdown"><div class="space" ></div></div>
